--- a/frontend/src/components/styles/inputs.css
+++ b/frontend/src/components/styles/inputs.css
@@ -1,6 +1,6 @@
 .input {
 	height: 10px;
-	min-width: 300px;
+	width: 100%;
 	background: var(--tertiary);
 	border: var(--primary) 2px solid;
 	border-radius: 5px;
@@ -14,7 +14,7 @@
 
 .password-input {
 	height: 10px;
-	min-width: 250px;
+	width: 80%;
 	background: var(--tertiary);
 	border-top: var(--primary) 2px solid;
 	border-bottom: var(--primary) 2px solid;
@@ -78,8 +78,7 @@
 	border-bottom-right-radius: 5px;
 	border-top-right-radius: 5px;
 	height: 34px;
-	min-width: 50px;
-	max-width: 50px;
+	width: 20%;
 	margin: 20px 0 0 -1px;
 }
 
@@ -93,7 +92,6 @@
 	border-bottom-right-radius: 5px;
 	border-top-right-radius: 5px;
 	height: 34px;
-	min-width: 57px;
-	max-width: 57px;
+	width: 20%;
 	margin: 20px 0 0 -5px;
 }
